hphp/test/zend/good/ext/mcrypt/tests/mcrypt_encrypt_variation3.php.skipif
<?php 
if (!extension_loaded("mcrypt")) {
	print "skip - mcrypt extension not loaded"; 
}	 
?> 