hphp/test/zend/bad/ext/xml/tests/xml_get_current_line_number_error.php.skipif
<?php 
if (!extension_loaded("xml")) {
	print "skip - XML extension not loaded"; 
}	 
?> 